# split-data-loader

./: README.md  pyproject.toml  requirements-dev.txt  setup.py  validate.sh
splitdataloader/: __init__.py  data_writer_and_loader.py  multiproc_queue_itr.py
